# amazon-q-developer-cli

tools/schema-tracker/: Cargo.toml  README.md  SCHEMA_TYPES_MAINTENANCE.md  build.sh
tools/schema-tracker/schemas/: conversation_schema_20250820_213140_schemars.json
tools/schema-tracker/src/: main.rs  schema_types.rs
